// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Point panel > Matches DOM Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="f3a03t2"
      >
        <p
          class="f1fepghe"
        >
          Location
        </p>
        <p
          class="f12a2168"
        >
          1 elizabeth st
        </p>
        <div
          class="f1kyo8ql"
        >
          <div
            class="fmcm93l"
          >
            <img
              src="/src/Components/SideBar/Assets/Clock.svg"
            />
            <p>
              09:00 - 17:00
            </p>
          </div>
          <div
            class="fmcm93l"
          >
            <img
              src="/src/Components/SideBar/Assets/Walking.svg"
            />
            <p>
              15 minutes
            </p>
          </div>
          <div
            class="fmcm93l"
          >
            <img
              src="/src/Components/SideBar/Assets/Target.svg"
            />
            <p>
              1 km
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="f3a03t2"
    >
      <p
        class="f1fepghe"
      >
        Location
      </p>
      <p
        class="f12a2168"
      >
        1 elizabeth st
      </p>
      <div
        class="f1kyo8ql"
      >
        <div
          class="fmcm93l"
        >
          <img
            src="/src/Components/SideBar/Assets/Clock.svg"
          />
          <p>
            09:00 - 17:00
          </p>
        </div>
        <div
          class="fmcm93l"
        >
          <img
            src="/src/Components/SideBar/Assets/Walking.svg"
          />
          <p>
            15 minutes
          </p>
        </div>
        <div
          class="fmcm93l"
        >
          <img
            src="/src/Components/SideBar/Assets/Target.svg"
          />
          <p>
            1 km
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Sidebar > Matches DOM Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="f1o03ftt"
      >
        <div
          class="ftnx03m"
          data-testid="inner-container"
        >
          <div
            class="f3a03t2"
          >
            <p
              class="f1fepghe"
            >
              Location
            </p>
            <p
              class="f12a2168"
            >
              1 elizabeth st
            </p>
            <div
              class="f1kyo8ql"
            >
              <div
                class="fmcm93l"
              >
                <img
                  src="/src/Components/SideBar/Assets/Clock.svg"
                />
                <p>
                  09:00 - 17:00
                </p>
              </div>
              <div
                class="fmcm93l"
              >
                <img
                  src="/src/Components/SideBar/Assets/Walking.svg"
                />
                <p>
                  15 minutes
                </p>
              </div>
              <div
                class="fmcm93l"
              >
                <img
                  src="/src/Components/SideBar/Assets/Target.svg"
                />
                <p>
                  1 km
                </p>
              </div>
            </div>
          </div>
          <div
            class="f3a03t2"
          >
            <p
              class="f1fepghe"
            >
              Location
            </p>
            <p
              class="f12a2168"
            >
              2 collins st
            </p>
            <div
              class="f1kyo8ql"
            >
              <div
                class="fmcm93l"
              >
                <img
                  src="/src/Components/SideBar/Assets/Clock.svg"
                />
                <p>
                  Closed
                </p>
              </div>
              <div
                class="fmcm93l"
              >
                <img
                  src="/src/Components/SideBar/Assets/Walking.svg"
                />
                <p>
                  30 minutes
                </p>
              </div>
              <div
                class="fmcm93l"
              >
                <img
                  src="/src/Components/SideBar/Assets/Target.svg"
                />
                <p>
                  2 km
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="f1o03ftt"
    >
      <div
        class="ftnx03m"
        data-testid="inner-container"
      >
        <div
          class="f3a03t2"
        >
          <p
            class="f1fepghe"
          >
            Location
          </p>
          <p
            class="f12a2168"
          >
            1 elizabeth st
          </p>
          <div
            class="f1kyo8ql"
          >
            <div
              class="fmcm93l"
            >
              <img
                src="/src/Components/SideBar/Assets/Clock.svg"
              />
              <p>
                09:00 - 17:00
              </p>
            </div>
            <div
              class="fmcm93l"
            >
              <img
                src="/src/Components/SideBar/Assets/Walking.svg"
              />
              <p>
                15 minutes
              </p>
            </div>
            <div
              class="fmcm93l"
            >
              <img
                src="/src/Components/SideBar/Assets/Target.svg"
              />
              <p>
                1 km
              </p>
            </div>
          </div>
        </div>
        <div
          class="f3a03t2"
        >
          <p
            class="f1fepghe"
          >
            Location
          </p>
          <p
            class="f12a2168"
          >
            2 collins st
          </p>
          <div
            class="f1kyo8ql"
          >
            <div
              class="fmcm93l"
            >
              <img
                src="/src/Components/SideBar/Assets/Clock.svg"
              />
              <p>
                Closed
              </p>
            </div>
            <div
              class="fmcm93l"
            >
              <img
                src="/src/Components/SideBar/Assets/Walking.svg"
              />
              <p>
                30 minutes
              </p>
            </div>
            <div
              class="fmcm93l"
            >
              <img
                src="/src/Components/SideBar/Assets/Target.svg"
              />
              <p>
                2 km
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
